# shabtzak

./: .env  .env.example  .gitattributes  .gitignore  DISTRIBUTION_README.md  DOCKER_TROUBLESHOOTING.md  README.md  START_DOCKER_AND_EXPORT.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  alembic.ini  api-server.spec  check_dump.py  convert_dump_to_sql.py  export_and_import.ps1  export_data_with_instructions.md  export_from_postgres.py  export_from_postgres_python.py  import_olddata.py  pack_backend.ps1  requirements.txt  start.py
backend/app/: db.py  main.py
backend/app/models/: __init__.py  assignment.py  base.py  department.py  mission.py  mission_requirement.py  mission_slot.py  role.py  saved_plan.py  soldier.py  soldier_friendship.py  soldier_mission_restriction.py  soldier_role.py  vacation.py
backend/app/routers/: assignments.py  data_io.py  departments.py  friendships.py  mission_history.py  mission_requirements.py  (+8 more)
backend/migrations/: env.py
backend/scripts/: create_tables.py  fix_seq_quick.py  fix_vacations_sequence.py
shabtzak-ui/: .env  .gitignore  APP_SETUP.md  QUICK_START.md  SETUP_COMPLETE.md  fix-installer.ps1  index.html  package-lock.json  package.json  post-build-patch.ps1  setup-app.ps1  vite.config.ts
shabtzak-ui/public/: manifest.json
shabtzak-ui/src/: App.tsx  api.ts  index.css  main.tsx
shabtzak-ui/src-tauri/: .gitignore  Cargo.toml  README.md  build.rs  installer.nsh  tauri.conf.json
shabtzak-ui/src-tauri/icons/: icon.icns
shabtzak-ui/src-tauri/resources/: shabtzak.db
shabtzak-ui/src-tauri/src/: main.rs
(+49 files in other folders)
