[package]
name = "shabtzak"
version = "0.1.0"
description = "Scheduling app to organize soldiers and missions in a platoon"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-hide", "window-start-dragging", "window-maximize", "window-close", "window-show", "window-unmaximize", "http-all", "window-unminimize", "window-minimize", "shell-open", "process-command-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

